--- a/config/database.yml
+++ b/config/database.yml
@@ -23,8 +23,8 @@ test:
 production:
   adapter: mysql2
   encoding: utf8
-  database: <%= ENV["ST_DB_NAME"] %>
+  database: stereotypist
   password: <%= ENV["ST_DB_PASS"] %>
-  username: <%= ENV["ST_DB_USER"] %>
+  username: stereotypist
   host: 127.0.0.1
   port: 3306
